2006-05-22  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (href): announce FISL additions.

	* site/about/automated-engraving/index.html (Module): idem.

	* scripts/big-page.py (Module): add new essay pages. 

	* site/about/automated-engraving/scoring-esthetics.html: new file.

2006-05-21  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scripts/format-page.py (do_options): add --offline

	* site/images/naive-notation-uml.png (Module): new file.

	* site/images/naive-notation.png (Module): new file

	* site/images/nonnaive-notation.png (Module): new file.

	* site/about/automated-engraving/problem-statement.html: new
	section on designing notation: hierarchy vs. divide & conqueror.

	* site/about/automated-engraving/divide-and-conquer.html: new file.

	* site/install/older-versions.html: oops, formatting error.

2006-05-19  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/older-versions.html: remove upgrade links.

	* site/news.ihtml (href): 2.9.5 release.

2006-05-18  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/install/devel.ihtml: use Gx monikers for Mac.

2006-05-15  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/about/index.html: fix broken link.

	* site/images/linux-audio-developers.jpeg (Module): new file.

2006-05-12  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/news.ihtml (Preferably): announce 2.9.4 and 2.8.2

2006-05-07  John Mandereau  <john.mandereau@free.fr>

	* fr/documentation.html, fr/switch/index.html, fr/index.html,
	fr/about/pubs.html: update translation.

2006-05-01  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* site/devel/participating/standards.html: document PEP 8 usage.

	* site/documentation.html: add 2.9 doc links.

	* nl/index.html: add 2.9 links.

	* scripts/big-page.py: 4 space indent everywhere.

2006-04-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/news.ihtml (href): announce slides.
	(href): oops. typo.

2006-04-22  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* site/about/pubs.html (href): add URL