@@ -66,28 +66,6 @@
   </tr>
 
   <tr>
-    <td>
-      <p align="center">
-	<img src="@IMAGES@fedora-logo.png">
-      </p>
-    </td>
-    <td>
-      Fedora Core
-    </td>
-    <td>4</td>
-    <td>
-      <strong>
-	_("Download <a href='%s'>%s</a>",
-	"../../download/binaries/Fedora-4/lilypond-2.6.5-1.i386.rpm",
-	"LilyPond"),
-	<a href="../../download/binaries/Fedora-4/lilypond-documentation-2.6.5-1.i386.rpm">_("documentation")</a>,
-      </strong>
-    </td>
-    <td>2.6.5</td>
-    <td><a href="http://post.gmane.org/post.php?group=gmane.comp.gnu.lilypond.bugs">_("LilyPond development team")</a></td>
-  </tr>
-
-  <tr>
     <td><p align="center"><img src="@IMAGES@suse-logo.png"></p></td>
     <td>
       SUSE
